8007085: EnableTracing prints garbage for Compilation: [Java Method Reviewed-by: coleenp, sla Contributed-by: markus.gronlund@oracle.com